Criando form para coleta de dados no index e inserindo o elemento no index.html.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+            crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<section class="container mt-2">
+    <h1>Passagem</h1>
 
+    {{ form }}
+    <input type="submit" value="ok" class="btn btn-success">
+
+</section>
 </body>
 </html>
+
+
+<div data-v-67a79838="" style="margin-bottom: 8px;"><a data-v-67a79838="" href="https://br.linkedin.com/in/danilovbarbosa" target="_blank"><img data-v-67a79838="" src="https://previews.dropbox.com/p/thumb/ABGf3g4qkmkdlaDNUT1HNPkhksA0_azLtPLpMsRsZm-H1FyWyQ6XKTR4qGJtKOz5Jk7jgQcTLiBJMWPqP6y7igw-dp_AqvL-lNEt90t-SdsQE8ZwgklGaPFR-eaPaCqHr7fh8EFFRbliyAFm5bFL3S7sbtsKk3hNIvmGuxOAaVMEWUFrFB4uDIPq4NDBfGKmjXmU8PUWuvr3ysxpLh_ZPG8ERoDlrFd15sNUGe49R4_PwLlQbEe0VY1xKg4ngW7Xrg-FdiUCfvl4mIt8lHs2Be_PejM5ueb5JxZljkw75F9hVAmFHUoFzOELEJNWiLmAdcLdEiXzEJiH3dVkpMe8Lt4B2mPAmazK9ILrXDICdK7KOw/p.jpeg" width="75" height="75"></a></div> <div data-v-67a79838="" style="display: inline-block;"><strong data-v-67a79838="" style="font-size: 16px; font-family: Arial, Helvetica, sans-serif; color: rgb(63, 107, 179); font-weight: bold;">Danilo Victor Barbosa da Costa · Engenheiro de Software e Professor</strong> <strong data-v-67a79838="" style="font-size: 12px; font-family: Arial, Helvetica, sans-serif; color: rgb(94, 94, 94); display: block; padding-bottom: 8px; font-weight: bold;"></strong> <a data-v-67a79838="" href="mailto:danilo.v.barbosa@gmail.com" style="font-size: 12px; font-family: Arial, Helvetica, sans-serif; color: rgb(94, 94, 94); display: block; text-decoration: none;">danilo.v.barbosa@gmail.com</a> <a data-v-67a79838="" href="tel:(82) 996-271-450" style="font-size: 12px; font-family: Arial, Helvetica, sans-serif; color: rgb(94, 94, 94);">(82) 996-271-450</a> <a data-v-67a79838="" href="//maps.google.com/?q=Arapiraca - AL" target="_blank" style="font-size: 12px; font-family: Arial, Helvetica, sans-serif; color: rgb(94, 94, 94); display: block; text-decoration: none;">Arapiraca - AL</a> <a data-v-67a79838="" href="//Lattes: lattes.cnpq.br/0814561860049851" target="_blank" style="font-size: 12px; font-family: Arial, Helvetica, sans-serif; color: rgb(94, 94, 94); display: block; text-decoration: none;">Lattes: lattes.cnpq.br/0814561860049851</a> <div data-v-67a79838=""><a data-v-67a79838="" href="https://br.linkedin.com/in/danilovbarbosa" target="_blank" style="padding: 14px 8px 14px 0px; display: inline-block;"><img data-v-67a79838="" src="https://rockcontent.com/ferramentas/gerador-de-assinatura-de-email/img/linkedin-color.png"></a></div>  </div>
