Incrementado atributos no PassagemForm e alterado o minha_conculta.html.

--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -6,5 +6,9 @@
 <p>Sua destino é : {{ formulario.destino.value }}</p>
 <p>Sua data de ida é : {{ formulario.data_ida.value }}</p>
 <p>Sua data de volta é : {{ formulario.data_volta.value }}</p>
+<p>Sua data de pesquisa é : {{ formulario.data_pesquisa.value }}</p>
+<p>Sua classe de viagem é : {{ formulario.classe_viagem.value }}</p>
+<p>Suas informações é : {{ formulario.informacoes.value }}</p>
+<p>Sua e-mail é : {{ formulario.email.value }}</p>
 
 {% endblock %}
