Finalizado o formulário. PessoaForm foi adicionado  a view e ao template.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,13 @@
         {% endfor %}
         {% endfor %}
 
+        {% for field in pessoas_form.visible_fields %}
+        <div class="form-group">
+            <label for="{{ field.id_for_label }}"> {{ field.label }} </label>
+            {{ field | add_class:'form-control' }}
+        </div>
+        {% endfor %}
+
         <input type="submit" value="ok" class="btn btn-success">
     </form>
 </section>
