--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -9,6 +9,6 @@
 <p>Sua data de pesquisa é : {{ form.data_pesquisa.value }}</p>
 <p>Sua classe de viagem é : {{ form.classe_viagem.value }}</p>
 <p>Suas informações é : {{ form.informacoes.value }}</p>
-<p>Sua e-mail é : {{ form.email.value }}</p>
+<p>Sua e-mail é : {{ pessoa_form.email.value }}</p>
 
 {% endblock %}
